@@ -1,3 +1,9 @@
+2006-05-02  Luca Cavalli  <loopback@slackit.org>
+
+	* src/gconf-bridge.c: (window_binding_perform_scheduled_sync),
+	(window_binding_state_event_cb), (gconf_bridge_bind_window):
+	Save and restore window maximized state (#340038).
+
 2006-04-29  Ross Burton  <ross@burtonini.com>
 
 	* configure.ac:
